; ModuleID = '/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_ssl_pm_free.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_ssl_pm_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.ssl_pm = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ssl_pm_free(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.ssl_pm*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = bitcast i32* %6 to %struct.ssl_pm*
  store %struct.ssl_pm* %7, %struct.ssl_pm** %3, align 8
  %8 = load %struct.ssl_pm*, %struct.ssl_pm** %3, align 8
  %9 = getelementptr inbounds %struct.ssl_pm, %struct.ssl_pm* %8, i32 0, i32 3
  %10 = call i32 @mbedtls_ctr_drbg_free(i32* %9)
  %11 = load %struct.ssl_pm*, %struct.ssl_pm** %3, align 8
  %12 = getelementptr inbounds %struct.ssl_pm, %struct.ssl_pm* %11, i32 0, i32 2
  %13 = call i32 @mbedtls_entropy_free(i32* %12)
  %14 = load %struct.ssl_pm*, %struct.ssl_pm** %3, align 8
  %15 = getelementptr inbounds %struct.ssl_pm, %struct.ssl_pm* %14, i32 0, i32 1
  %16 = call i32 @mbedtls_ssl_config_free(i32* %15)
  %17 = load %struct.ssl_pm*, %struct.ssl_pm** %3, align 8
  %18 = getelementptr inbounds %struct.ssl_pm, %struct.ssl_pm* %17, i32 0, i32 0
  %19 = call i32 @mbedtls_ssl_free(i32* %18)
  %20 = load %struct.ssl_pm*, %struct.ssl_pm** %3, align 8
  %21 = call i32 @ssl_mem_free(%struct.ssl_pm* %20)
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32* null, i32** %23, align 8
  ret void
}

declare dso_local i32 @mbedtls_ctr_drbg_free(i32*) #1

declare dso_local i32 @mbedtls_entropy_free(i32*) #1

declare dso_local i32 @mbedtls_ssl_config_free(i32*) #1

declare dso_local i32 @mbedtls_ssl_free(i32*) #1

declare dso_local i32 @ssl_mem_free(%struct.ssl_pm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
